--- a/test/fixtures/routes.yml
+++ b/test/fixtures/routes.yml
@@ -1,9 +1,11 @@
 # == Schema Information
 #
-# Table name: templates
+# Table name: routes
 #
 #  id         :integer          not null, primary key
-#  name       :string
+#  site_id    :integer
+#  host       :string
+#  path       :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -11,7 +13,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  host: MyString
+  path: MyString
+  site_id: 1
 
 two:
-  name: MyString
+  host: MyString
+  path: MyString
+  site_id: 1
