--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
   database: falcms_test
 
 production:
