--- a/.eslintrc
+++ b/.eslintrc
@@ -5,20 +5,12 @@
       "experimentalObjectRestSpread": true
     }
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": [],
   "rules": {
     "arrow-body-style": 1,
-    "object-shorthand": 0,
-    "comma-dangle": 0,
-    "func-names": 0,
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/prop-types": 2,
+    "func-names": 0
   },
   "globals": {
-    "React": true,
     "vg": true,
     "d3": true,
     "$": true,
