implemented tabs view
This is a generic tab view created to be used in any place and
customizable. Any suggestion or idea is welcome!

TO-DO: implement basic styling

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
     "$": true,
     "L": true,
     "Backbone": true,
-    "handlebars": true,
+    "HandlebarsTemplates": true,
     "_": true
   },
   "env": {
