--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,14 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+# Postgres
 #
 default: &default
   adapter: postgresql
-  pool: 5
-  timeout: 5000
+  encoding: unicode
+  username: <%= ENV.fetch("POSTGRES_USERNAME") { "postgres" } %>
+  host: <%= ENV.fetch("POSTGRES_PORT_5432_TCP_ADDR") { "localhost" } %>
+  port: <%= ENV.fetch("POSTGRES_PORT_5432_TCP_PORT") { 5432 } %>
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
@@ -19,6 +20,10 @@ development:
 test:
   <<: *default
   database: falcms_test
+
+staging:
+  <<: *default
+  database: falcms_staging
 
 production:
   <<: *default
