--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,12 @@
 {
-  "extends": "eslint:recommended",
+  "extends": "airbnb-base/legacy",
   "rules": {
     "arrow-body-style": 1,
-    "func-names": 0
+    "func-names": 0,
+    "no-new": 0,
+    "no-param-reassign": [2, { "props": false }],
+    "max-len": [2, { "ignoreComments": true }],
+    "vars-on-top": 0
   },
   "globals": {
     "vg": true,
