Adds the CSS structure and updates the architecture

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "L": true,
     "Backbone": true,
     "HandlebarsTemplates": true,
-    "_": true
+    "_": true,
+    "Turbolinks": true
   },
   "env": {
     "browser": true
