Adds the possibility to specify an empty div that will hold a search field

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
     "_": true,
     "Turbolinks": true,
     "SirTrevor": true,
-    "gon": true
+    "gon": true,
+    "Fuse": true
   },
   "env": {
     "browser": true
