Adds a basic integration of the wysiwyg editor

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
     "Backbone": true,
     "HandlebarsTemplates": true,
     "_": true,
-    "Turbolinks": true
+    "Turbolinks": true,
+    "SirTrevor": true
   },
   "env": {
     "browser": true
