--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ rvm:
   - 2.3.1
 services:
   - postgresql
+addons:
+  postgresql: "9.4"
 before_install:
   - gem install bundler -v 1.12.5
   - bundle install
