Basic chart integration in the analysis dashboard

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "Turbolinks": true,
     "SirTrevor": true,
     "gon": true,
-    "Fuse": true
+    "Fuse": true,
+    "Jiminy": true
   },
   "env": {
     "browser": true
