--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
     "HandlebarsTemplates": true,
     "_": true,
     "Turbolinks": true,
-    "SirTrevor": true,
+    "Quill": true,
     "gon": true,
     "Fuse": true,
     "Jiminy": true,
