--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,8 @@ staging:
 production:
   <<: *default
   database: falcms_prod
+  host: localhost
+  port: 5432
   username: <%= ENV['FA_CMS_DATABASE_USER'] %>
   password: <%= ENV['FA_CMS_DATABASE_PASSWORD'] %>
 
