Adds syntax highlighting to the map's configuration

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,8 @@
     "Fuse": true,
     "Jiminy": true,
     "PruneClusterForLeaflet": true,
-    "PruneCluster": true
+    "PruneCluster": true,
+    "CodeMirror": true
   },
   "env": {
     "browser": true
