Changes the translations behaviour for the standalone map
* The query param associated to the language is now "l"
* Remove the 1s trick to change the map's language in favour of the new query param

--- a/lib/tasks/map_config.json
+++ b/lib/tasks/map_config.json
@@ -15,7 +15,7 @@
   "includeMyGFWLogin": false,
   "navLinksInNewTab": false,
   "language": "en",
-  "useAlternativeLanguage": false,
+  "useAlternativeLanguage": true,
   "alternativeWebmap": "",
   "alternativeLanguage": "fr",
   "alternativeLanguageTitle": "GFW Mapbuilder",
