Assets are already deployed, but the files aren't being properly imported. Needs to use context

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,10 @@
 # Generated assets
 /vendor/bundle
 /public/assets
+/public/stylesheets
 /public/uploads
 /public/system
+.sass-cache
 
 # NPM modules
 /node_modules
