Removed compiled assets

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@
 /vendor/bundle
 /public/assets
 /public/stylesheets
+/public/stylesheets/front
+/public/stylesheets/front/sites
 /public/uploads
 /public/system
 .sass-cache
