--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
   "devDependencies": {
     "eslint": "^3.3.1",
     "eslint-config-airbnb-base": "^5.0.3",
-    "eslint-plugin-import": "^1.14.0"
+    "eslint-plugin-import": "^1.14.0",
+    "webpack-dev-server": "2.11.2"
+  },
+  "dependencies": {
+    "@rails/webpacker": "^3.3.1",
+    "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react_ujs": "^2.4.4"
   }
 }
