--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react_ujs": "^2.4.4"
+    "react-redux": "^5.0.7",
+    "react_ujs": "^2.4.4",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   }
 }
