--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,18 @@
 {
-  "extends": "airbnb-base/legacy",
+  "extends": "vizzuality",
   "rules": {
-    "arrow-body-style": 1,
-    "func-names": 0,
-    "no-new": 0,
-    "no-multi-str": 0,
-    "no-param-reassign": [2, { "props": false }],
-    "max-len": [2, 120, { "ignoreComments": true }],
-    "vars-on-top": 0,
-    "one-var": 0,
-    "no-underscore-dangle": [2, { "allowAfterThis": true, "allowAfterSuper": true }],
-    "quote-props": [2, "consistent"]
+    "class-methods-use-this": 0,
+    "import/prefer-default-export": 0,
+    "import/extensions": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "import/named": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0,
+    "linebreak-style": 0,
+    "no-plusplus": 0,
+    "jsx-a11y/href-no-hash": 0,
+    "jsx-a11y/anchor-is-valid": 0
   },
   "globals": {
     "vg": true,
@@ -32,7 +34,19 @@
     "Transifex": true,
     "pica": true
   },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "sourceType": "module"
+  },
+  "plugins": [
+    "babel"
+  ],
   "env": {
-    "browser": true
+    "browser": true,
+    "es6": true
   }
 }
