implement fuse.js for table search

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rails/webpacker": "^3.3.1",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
+    "fuse.js": "^3.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
