--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,9 @@
 {
-  "extends": "vizzuality",
-  "rules": {
-    "class-methods-use-this": 0,
-    "import/prefer-default-export": 0,
-    "import/extensions": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-unresolved": 0,
-    "import/named": 0,
-    "react/prefer-stateless-function": 0,
-    "react/jsx-filename-extension": 0,
-    "linebreak-style": 0,
-    "no-plusplus": 0,
-    "jsx-a11y/href-no-hash": 0,
-    "jsx-a11y/anchor-is-valid": 0
+  "env": {
+    "browser": true,
+    "node": true,
+    "mocha": true,
+    "es6": true
   },
   "globals": {
     "vg": true,
@@ -34,6 +25,21 @@
     "Transifex": true,
     "pica": true
   },
+  "extends": "vizzuality",
+  "rules": {
+    "class-methods-use-this": 0,
+    "import/prefer-default-export": 0,
+    "import/extensions": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "import/named": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0,
+    "linebreak-style": 0,
+    "no-plusplus": 0,
+    "jsx-a11y/href-no-hash": 0,
+    "jsx-a11y/anchor-is-valid": 0
+  },
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 7,
@@ -42,8 +48,13 @@
     },
     "sourceType": "module"
   },
-  "env": {
-    "browser": true,
-    "es6": true
+  "plugins": [
+    "babel"
+  ],
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+      }
+    }
   }
 }
