--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,4 @@
 {
-  "extends": "vizzuality",
-  "rules": {
-    "class-methods-use-this": 0,
-    "import/prefer-default-export": 0,
-    "import/extensions": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-unresolved": 0,
-    "import/named": 0,
-    "react/prefer-stateless-function": 0,
-    "react/jsx-filename-extension": 0,
-    "linebreak-style": 0,
-    "no-plusplus": 0,
-    "jsx-a11y/href-no-hash": 0,
-    "jsx-a11y/anchor-is-valid": 0
-  },
   "globals": {
     "vg": true,
     "d3": true,
@@ -33,6 +18,22 @@
     "CodeMirror": true,
     "Transifex": true,
     "pica": true
+  },
+  "extends": "vizzuality",
+  "rules": {
+    "class-methods-use-this": 0,
+    "import/prefer-default-export": 0,
+    "import/extensions": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "import/named": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0,
+    "linebreak-style": 0,
+    "no-plusplus": 0,
+    "jsx-a11y/href-no-hash": 0,
+    "jsx-a11y/anchor-is-valid": 0,
+    "radix": 0
   },
   "parser": "babel-eslint",
   "parserOptions": {
