Move the ENV variables to their own reducer

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,7 @@
 SECRET_KEY_BASE=
 API_URL=http://production-api.globalforestwatch.org
+API_ENV=production,preproduction
+API_APPLICATIONS=forest-atlas
+CONTROL_TOWER_URL=https://production-api.globalforestwatch.org
 GLOBAL_GA_KEY=
 export APPSIGNAL_PUSH_API_KEY=
