--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.2.0",
     "react-quill": "^1.2.7",
     "react-redux": "^5.0.7",
+    "react-vega": "^3.1.2",
     "react_ujs": "^2.4.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
