--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react_ujs": "^2.4.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "vega": "^3.3.1"
   }
 }
