--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
     "no-plusplus": 0,
     "jsx-a11y/href-no-hash": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "radix": 0
+    "radix": 0,
+    "object-curly-newline": 0
   },
   "parser": "babel-eslint",
   "parserOptions": {
