--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "homepage": "https://github.com/Vizzuality/forest-atlas-landscape-cms#readme",
   "devDependencies": {
     "babel-eslint": "^8.2.3",
+    "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^4.19.1",
     "eslint-config-vizzuality": "^1.0.14",
-    "eslint-plugin-babel": "^5.0.0",
-    "webpack-dev-server": "2.11.2"
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "webpack-dev-server": "3.1.3"
   },
   "dependencies": {
     "@rails/webpacker": "^3.3.1",
