--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 SECRET_KEY_BASE=
-API_URL=http://production-api.globalforestwatch.org
+API_URL=http://production-api.globalforestwatch.org/v1
 API_ENV=production,preproduction
 API_APPLICATIONS=forest-atlas
 CONTROL_TOWER_URL=https://production-api.globalforestwatch.org
