add new wysiwyg editor from RW

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react_ujs": "^2.4.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "vizz-wysiwyg": "^1.1.13"
   }
 }
