--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "fuse.js": "^3.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-quill": "^1.2.7",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
+    "react-quill": "1.1.0",
     "react-redux": "^5.0.7",
     "react_ujs": "^2.4.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "vizz-wysiwyg": "^1.1.13"
   }
 }
