--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,6 @@ yarn-error.log
 /db/*.dump
 /public/packs
 /public/packs-test
-/node_modules
 yarn-debug.log*
 .yarn-integrity
-yarn-error.log
+package-lock.json
