--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "webpack-dev-server": "3.1.3"
   },
   "dependencies": {
-    "babel-plugin-module-resolver": "^3.1.1",
-    "copy-webpack-plugin": "^4.5.1",
     "@rails/webpacker": "^3.3.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
+    "copy-webpack-plugin": "^4.5.1",
     "fuse.js": "^3.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
@@ -42,8 +42,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "vizz-wysiwyg": "^1.1.13",
     "widget-editor": "^1.1.0",
-    "wri-json-api-serializer": "^1.0.1",
-    "vizz-wysiwyg": "^1.1.13"
+    "wri-json-api-serializer": "^1.0.1"
   }
 }
