--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "vizz-wysiwyg": "^1.1.13",
-    "widget-editor": "https://github.com/resource-watch/widget-editor#develop",
+    "widget-editor": "^1.1.0",
     "wri-json-api-serializer": "^1.0.1"
   }
 }
