--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
     "PruneCluster": true,
     "CodeMirror": true,
     "Transifex": true,
-    "pica": true
+    "pica": true,
+    "ENV": true
   },
   "extends": "vizzuality",
   "rules": {
@@ -40,7 +41,8 @@
     "jsx-a11y/href-no-hash": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "radix": 0,
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "no-use-before-define": 0
   },
   "parser": "babel-eslint",
   "parserOptions": {
