--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "fuse.js": "^3.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
+    "rc-slider": "^8.6.1",
     "react": "15.6.2",
     "react-dom": "15.6.2",
+    "react-flatpickr": "^3.6.4",
     "react-quill": "1.1.0",
     "react-redux": "^5.0.7",
+    "react-select": "^1.2.1",
     "react_ujs": "^2.4.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
