--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,8 @@ yarn-error.log
 yarn-debug.log*
 .yarn-integrity
 package-lock.json
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
