--- a/DockerfileDev
+++ b/DockerfileDev
@@ -10,7 +10,8 @@ RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
     apt-get update && \
     apt-get install -qq -y build-essential nodejs yarn \
     libpq-dev \
-    postgresql-client
+    postgresql-client && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install app dependencies
 COPY Gemfile Gemfile.lock ./
