Initial changes for India Template

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,4 @@
-SECRET_KEY_BASE=
-API_URL=http://production-api.globalforestwatch.org/v1
+API_URL=https://production-api.globalforestwatch.org/v1
 API_ENV=production,preproduction
-API_APPLICATIONS=forest-atlas
+API_APPLICATIONS=forest-atlas,gfw
 CONTROL_TOWER_URL=https://production-api.globalforestwatch.org
-GLOBAL_GA_KEY=
-export APPSIGNAL_PUSH_API_KEY=
