--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
 
 development:
   <<: *default
-  database: <%= ENV.fetch("POSTGRES_DATABASE") { "falcms_dev" } %>
+  database: <%= ENV.fetch("POSTGRES_DATABASE") { "falcms_dev_prod" } %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
