--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^4.5.1",
     "fuse.js": "^3.2.0",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
     "rc-slider": "^8.6.1",
@@ -45,8 +46,8 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
-    "widget-editor": "1.3.7",
     "vizz-wysiwyg": "^2.1.1",
+    "widget-editor": "1.3.7",
     "wri-json-api-serializer": "^1.0.1"
   }
 }
