--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "react-quill": "1.3.0",
     "react-redux": "^5.0.7",
     "react-select": "^1.2.1",
+    "react-slick": "^0.23.2",
     "react_ujs": "^2.4.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "vizz-wysiwyg": "^2.1.1",
     "widget-editor": "1.3.8",
     "wri-json-api-serializer": "^1.0.1"
