--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^4.5.1",
+    "date-fns": "^1.30.1",
     "fuse.js": "^3.2.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.1",
