--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,17 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "modules": false,
         "targets": {
           "browsers": "> 1%",
           "uglify": true
         },
-        "useBuiltIns": true
+        "useBuiltIns": false
       }
     ],
-    "react"
+    "@babel/preset-react"
   ],
   "plugins": [
     "syntax-dynamic-import",
