Update eslint-plugin-jsx-a11y and configure it
This fixes issues with fix false positive errors.

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,11 @@
     "jsx-a11y/anchor-is-valid": 0,
     "radix": 0,
     "object-curly-newline": 0,
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/label-has-associated-control": [2, {
+      "assert": "either"
+    }]
   },
   "parser": "babel-eslint",
   "parserOptions": {
