Generate the URL of MapBuilder based on an ENV var

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ API_URL=https://production-api.globalforestwatch.org/v1
 API_ENV=production,preproduction
 API_APPLICATIONS=forest-atlas,gfw
 CONTROL_TOWER_URL=https://production-api.globalforestwatch.org
+MAP_BUILDER_BASE_URL=https://library.gfw-mapbuilder.org
