--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 API_URL=https://production-api.globalforestwatch.org/v1
 API_ENV=production,preproduction
 API_APPLICATIONS=forest-atlas,gfw
+WEBSHOT_API_URL=https://production-api.globalforestwatch.org/v1
 CONTROL_TOWER_URL=https://production-api.globalforestwatch.org
 MAP_BUILDER_BASE_URL=https://library.gfw-mapbuilder.org
