--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
   },
   "dependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
+    "@widget-editor/rw-adapter": "^2.2.0",
+    "@widget-editor/widget-editor": "^2.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^3.0.6",
