--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "vizz-wysiwyg": "^2.1.2",
+    "vizzuality-components": "^3.0.3",
     "wri-json-api-serializer": "^1.0.1"
   }
 }
