--- a/package.json
+++ b/package.json
@@ -34,15 +34,17 @@
   },
   "dependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
+    "@widget-editor/rw-adapter": "^2.3.1",
+    "@widget-editor/widget-editor": "^2.3.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^3.0.6",
     "canvas": "^2.5.0",
     "classnames": "^2.2.5",
-    "copy-webpack-plugin": "^4.5.1",
     "date-fns": "^1.30.1",
     "fuse.js": "^3.2.0",
     "lodash": "^4.17.11",
@@ -61,10 +63,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
-    "vega": "^3.1.0",
-    "vega-lib": "4.4.0",
     "vizz-wysiwyg": "^2.1.2",
-    "widget-editor": "^1.4.6",
+    "vizzuality-components": "^3.0.3",
     "wri-json-api-serializer": "^1.0.1"
   }
 }
